--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=18081
-spring.application.name=goods
+spring.application.name=dev-community
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://192.168.1.200:3306/changgou_goods?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
-
+eureka.client.service-url.defaultZone=http://127.0.0.1:7001/eureka
+eureka.instance.prefer-ip-address=true
+feign.hystrix.enabled=true
